# pokerb

./: .gitignore  Dockerfile  README.md  pokerb.cabal
src/: Login.hs  Main.hs  Pokerb.hs  Scrap.hs
