name:                pokerb
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/bballant/pokerb#readme
license:             BSD3
license-file:        LICENSE
author:              Brian Ballantine
maintainer:          example@example.com
copyright:           2018 Brian Ballantine
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable pokerb
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Pokerb
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       time,
                       random
